# prime_num

./: .gitignore  Cargo.toml  README.md  example.py  requirements.txt  setup.py
prime_num/: __init__.py
src/: lib.rs
