[package]
name = "prime_num"
version = "0.1.0"
authors = ["Nobuaki Mochizuki <hagaeru3sei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mypackage"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.13"
numpy = "0.12.1"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]